--- a/src/main/resources/templates/kp.html
+++ b/src/main/resources/templates/kp.html
@@ -119,7 +119,7 @@
 
   <div class="container">
     <!-- Logo -->
-    <img src="/image/Keploy_Logo.png" alt="image/Keploy_Logo.png" class="logo">
+    <img src="/image/Keploy_Logo.png" alt="Keploy_Logo.png" class="logo">
 
     <!-- Radio Switch -->
     <input type="radio" name="tab" id="login" checked>
@@ -148,7 +148,7 @@
         <input type="password" name="password" placeholder="Password" required>
         <button type="submit">Sign Up</button>
       </form>
-      <p style="color:#ff6f00; font-weight:bold;">
+      <p style="color:#FFAC1C; font-weight:bold;">
         <span th:text="${message}"></span>
       </p>
 
